# testWinDI

./: Dockerfile  README.md  docker-compose.yaml  example_env_file.txt  pylintrc.toml  pyproject.toml
app/: exceptions.py  main.py  ws_manager.py
app/api/: __init__.py
app/api/v1/: __init__.py  auth_routes.py  chat_routes.py  message_routes.py  router.py  user_routes.py  ws_routes.py
app/core/: __init__.py  auth.py  config.py  create_database.py  database.py  logging_config.py
app/exceptions/: __init__.py  user_exception.py
app/models/: __init__.py  chat_model.py  group_model.py  message_model.py  user_model.py
app/repositories/: __init__.py  chat_repository.py  group_repository.py  message_repository.py  repository.py  user_repository.py
app/schemas/: __init__.py  auth_schema.py  chat_schema.py  message_schema.py  user_schema.py
app/services/: __init__.py  auth_service.py  chat_service.py  message_service.py  user_service.py  ws_service.py
